# SE_Rag

./: README.md
Backend/: CMakeLists.txt  vcpkg.json
Backend/include/core/: GraphAlgo.h  Neo4jClient.h  OllamaClient.h  PdfParser.h
Backend/src/core/: Neo4jClient.cpp  OllamaClient.cpp  PdfParser.cpp
Backend/src/ingestion/: main.cpp
Backend/src/server/: main.cpp
Backend/tests/: TestPdfParser.cpp
